<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textResult"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:text="@string/bmi" />
    <TextView
        android:id="@+id/textResultSubtitle"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/design_default_color_primary_variant"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="0dp"
        android:paddingHorizontal="16dp"
        android:text="@string/result_subtitle" />
    <!-- https://developer.android.com/guide/topics/resources/string-resource#FormattingAndStyling -->
    <TextView
        android:id="@+id/textHeight"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        android:labelFor="@id/editHeight"
        android:text="@string/height"
        android:contentDescription="@string/height"/>

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textWeight"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:labelFor="@id/editWeight"
        android:text="@string/weight" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_marginTop="32dp"
        android:paddingVertical="8dp"
        android:text="@string/calculate" />

</LinearLayout>