<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingHorizontal="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textResult"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textResultSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/bmi"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/textResultSubtitle"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/editHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"
        android:text="@string/result_subtitle"
        android:textColor="@color/design_default_color_primary_variant"
        android:visibility="invisible"
        tools:visibility="visible" />
    <!-- https://developer.android.com/guide/topics/resources/string-resource#FormattingAndStyling -->
    <TextView
        android:id="@+id/textHeight"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/editHeight"
        app:layout_constraintStart_toStartOf="@+id/editHeight"
        android:contentDescription="@string/height"
        android:labelFor="@id/editHeight"
        android:text="@string/height"
        android:visibility="invisible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/height"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textWeight"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/editWeight"
        app:layout_constraintStart_toStartOf="@+id/editWeight"
        android:labelFor="@id/editWeight"
        android:text="@string/weight"
        android:visibility="invisible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHeight"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/weight"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editWeight"
        android:layout_marginTop="32dp"
        android:paddingVertical="8dp"
        android:text="@string/calculate"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        />

</androidx.constraintlayout.widget.ConstraintLayout>